--- a/todo.txt
+++ b/todo.txt
@@ -9,4 +9,6 @@
 *   run BFG repo cleaner on this repo
 *   document the bspwm/gtk/bin/root/mutt directories
 	* don't forget to credit dcat for initial prompt, and earsplit/z3bra for initial panel scripts.
+*   make a new workflow webm.
 *   better document and 'clean' things within the dotfiles themselves(never ends)
+
