update walls, pyonium works with the gtk stuff now, pulse check, todo.
Former-commit-id: 97f33e9eb45fd13bebbbe088ba7c6593de75258b
Former-commit-id: 22d0f71e8b073752185b569eb9b1d65a554154e7

--- a/todo.txt
+++ b/todo.txt
@@ -11,4 +11,7 @@
 	* don't forget to credit dcat for initial prompt, and earsplit/z3bra for initial panel scripts.
 *   make a new workflow webm.
 *   better document and 'clean' things within the dotfiles themselves(never ends)
+*	qutebrowser font/tab padding confirm to whatever current panel is
+*	pulse.sh border correction on change window
+	* see if can use more bspc commands here?
 
