add gtk stuff for chalk and material, fix panel killing issue. now all the themes generate their own gtk theme.
Former-commit-id: 48dcf9cbaaa021790a3fea7803e09679aa7cf95e
Former-commit-id: 104e70f2630b58c9e4c3f4fa853a912109668b4b

--- a/todo.txt
+++ b/todo.txt
@@ -14,4 +14,5 @@
 *	qutebrowser font/tab padding confirm to whatever current panel is
 *	pulse.sh border correction on change window
 	* see if can use more bspc commands here?
+*	clean up the theme scripts.
 
