--- a/shell/.sh.d/history
+++ b/shell/.sh.d/history
@@ -1,6 +1,8 @@
 # -*- mode: sh -*-
 
 cur_shell=$(ps | grep $$ |  sed 's/^.* //')
+cur_shell="${cur_shell##*/}"
+
 history_length=10000
 history_file="$HOME/.${cur_shell}_history"
 
