--- a/readme.org
+++ b/readme.org
@@ -5,6 +5,7 @@
 | WM          | BSPWM                  |
 | Panel       | lemonbar               |
 | Terminal    | [[https://github.com/neeasade/xst][xst]]                    |
+| Editor      | Emacs                  |
 | GTK         | [[https://github.com/actionless/oomox][oomox]] with [[http://pobtott.deviantart.com/art/Any-Color-You-Like-175624910][ACYL]] icons. |
 
-These are managed with stow. Some of my configs are [[https://github.com/neeasade/dotfiles/tree/master/wm/.wm/templates][templates]].
+Many of my dotfiles are tied to a centralized themefile using [[https://github.com/neeasade/dotfiles/tree/master/wm/.wm/templates][templates]]. The default theme values are [[https://github.com/neeasade/dotfiles/tree/master/wm/.wm/scripts/theming/defaults][here]], the theme files can be seen [[https://github.com/neeasade/dotfiles/tree/master/wm/.wm/themes][here]], and the [[https://github.com/neeasade/dotfiles/blob/master/wm/.wm/scripts/theming/ltheme][ltheme]] script ties it all together.
