--- a/shell/.sh.d/history
+++ b/shell/.sh.d/history
@@ -20,9 +20,14 @@ case "$cur_shell" in
     SAVEHIST="$history_length"
     HISTSIZE="$history_length"
 
-    setopt hist_ignore_dups
+    # setopt extended_history       # record timestamp of command in HISTFILE
+    setopt hist_expire_dups_first # delete duplicates first when HISTFILE size exceeds HISTSIZE
+    setopt hist_ignore_dups       # ignore duplicated commands history list
     setopt hist_ignore_all_dups
-    setopt hist_ignore_space
+    setopt hist_ignore_space      # ignore commands that start with space
+    # setopt hist_verify            # show command with history expansion to user before running it
+    setopt inc_append_history     # add commands to HISTFILE in order of execution
+    setopt share_history          # share command history data
     ;;
   mksh)
     HISTFILE="$history_file"
