--- a/nixos/readme.org
+++ b/nixos/readme.org
@@ -6,7 +6,7 @@ Setup
 sudo mv /etc/nixos/hardware-configuration.nix{,.bak}
 sudo mv /etc/nixos/configuration.nix{,.bak}
 
-sudo ln -s $(readlink -f ./configuration.nix) /etc/nixos/configuration.nix
+sudo ln -s $(readlink -f ./machines/$(hostname)/configuration.nix) /etc/nixos/configuration.nix
 #+end_src
 
 inspo: https://github.com/curiousleo/setup/tree/master/nixos
