--- a/shell/.sh.d/history
+++ b/shell/.sh.d/history
@@ -6,15 +6,25 @@ history_file="$HOME/.${cur_shell}_history"
 # cur_shell is from environment.
 case "$cur_shell" in
   bash)
-    HISTFILE=$history_file
-    HISTFILESIZE=$history_length
-    HISTSIZE=$history_length
+    export HISTFILE=$history_file
+    export HISTFILESIZE=$history_length
+    export HISTSIZE=$history_length
+
+    # note: this causes things to be ignored in interactive history as well
+    # but we circumvent that with comint/emacs shells
+    export HISTIGNORE="cd*:ls*:clear:date:pwd"
 
     shopt -s histappend
-    HISTCONTROL=ignoredups:erasedups:ignorespace
+    export HISTCONTROL=ignoredups:erasedups:ignorespace
 
     # store things in the history file as we go along
-    export PROMPT_COMMAND="history -a; history -c; history -r; $PROMPT_COMMAND"
+    # also expand aliases
+    # export PROMPT_COMMAND="history -a; history -c; history -r; $PROMPT_COMMAND"
+    if ! echo "$PROMPT_COMMAND"  | grep -q history; then
+      export PROMPT_COMMAND="history -a; history -c; history -r; $PROMPT_COMMAND"
+    fi
+
+    # export PROMPT_COMMAND="history -a; history -c; history -r"
     ;;
   zsh)
     HISTFILE=$history_file
